🐞 Fix book covers

--- a/app/globals.css
+++ b/app/globals.css
@@ -1198,7 +1198,7 @@ pre code {
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -2px rgba(0, 0, 0, 0.1);
+    0 -2px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
 .book-cover-content {
@@ -1241,6 +1241,7 @@ pre code {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 12px;
 }
 
 .book-info {
